      * DDD no longer blocks while the manual is uncompressed and formatted.
      * DDD stores manuals in `gzip' format, saving space in executables.
    - New `What Now?' help.  Gives a hint on what you can do next,
      depending on the current DDD state.  Useful for beginners.
    - Improved data display.
      * Displayed data is highlighted whenever it changes.
      * You can now incrementally `Show More' details of an object,
        instead of showing all details at once.
      * Processing displays can be interrupted by typing Ctrl+C.
    - Drag and drop support.
      * You can now alter the current execution position interactively
        by dragging and dropping the execution arrow.  This allows you
        to back up - perhaps with more breakpoints set-over a portion
        of a program that has already executed, in order to examine
        its execution in more detail.
      * Breakpoints can be dragged and dropped, too.  This allows you
        to move breakpoints to alternate positions, without changing
        their properties.
    - Improved display of breakpoints and execution positions.
      * The current execution position is now properly cleared if
        undetermined (no source, program terminated, etc.)
      * If the program stopped due to a signal, this is indicated
        by a lightning symbol within the current execution glyph.
      * Faster scrolling.  While scrolling source or machine code at
        high speed, glyphs are now unmapped.  Slow scrolling still
        shows glyphs.
    - Improved DBX and XDB support.
      * DDD supports DBX and XDB breakpoint conditions.
      * With SUN DBX 3.x, DDD also supports disabled breakpoints 
        and ignore counts.
    - User-defined DDD commands.  DDD now provides a simple facility
      that allows the inferior debugger to execute DDD commands.  For
      details, see `User-Defined Commands' in the DDD manual.
    - For `Continue Until Here', DDD now sets a temporary breakpoint